Chained calls in Record tests
Introduced test API for inspect with options consumer
and enableJVMPreview to be able to express the Record
test with chained calls

Change-Id: Id67b4e1f0cdab7e3f9b3a93c2ed0f686681e14b4